--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,9 @@ theme:
     - content.code.annotate
     - search.suggest
 markdown_extensions:
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
   - attr_list
   - md_in_html
   - pymdownx.highlight:
