--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,9 +25,9 @@ nav:
             - Qualificació: unitats/1-python/pràctiques/tasques/3 - Qualificació.md
     - Unitat 2 - Introducció a les interfícies d'usuari:
       - Teoria:
-        - Introducció a les GUI: unitats/2-intro-interficies/teoria/1 - Introduccio.md
-        - Usabilitat: unitats/2-intro-interficies/teoria/2 - Usabilitat.md
-        - Pautes de disseny: unitats/2-intro-interficies/teoria/3 - Pautes de Disseny.md
+        - 1 - Introducció a les interfícies d'usuari: unitats/2-intro-interficies/teoria/1 - Introduccio.md
+        - 2 - Usabilitat: unitats/2-intro-interficies/teoria/2 - Usabilitat.md
+        - 3 - Pautes de disseny: unitats/2-intro-interficies/teoria/3 - Pautes de Disseny.md
       - Tasques:
         - Activitats: unitats/2-intro-interficies/tasques/1 - Activitats.md
         - Pràctiques: unitats/2-intro-interficies/tasques/2 - Pràctiques.md
