--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ nav:
       - Tasques:
         - Activitats: unitats/2-intro-interficies/tasques/1 - Activitats.md
         - Pràctiques: unitats/2-intro-interficies/tasques/2 - Pràctiques.md
+      - Enllaços: unitats/2-intro-interficies/enllaços/enllaços.md
     - Qualificació:
       - Criteris: 
         - Rúbriques:  qualificacio/rubrica.md
